# sqlmermaid

./: README.md  pyproject.toml
app/parser/: parser.py
cli/: cli.py
common/errors/: errors.py
common/syntax/: syntax.py
tests/app/parser/: test_parser.py
tests/common/syntax/: test_syntax.py
